--- a/.github/workflows/pubby.yml
+++ b/.github/workflows/pubby.yml
@@ -100,7 +100,7 @@ jobs:
               await sleep(10000);
               await safeScreenshot(page, `screenshots/pubby_browse_${Date.now()}.png`);
 
-              // Stage 4: Kindle Unlimited filter
+              // Stage 4: Click 'Kindle Unlimited' filter
               console.log("Stage 4: Clicking 'Kindle Unlimited' filter…");
               await page.evaluate(() => {
                 const tag = Array.from(document.querySelectorAll('.browsing-tag'))
@@ -110,7 +110,7 @@ jobs:
               await sleep(5000);
               await safeScreenshot(page, `screenshots/pubby_kindle_unlimited_${Date.now()}.png`);
 
-              // Stage 5: Most Snaps filter
+              // Stage 5: Click 'Most Snaps' filter
               console.log("Stage 5: Clicking 'Most Snaps' filter…");
               await page.evaluate(() => {
                 const tag = Array.from(document.querySelectorAll('.browsing-tag'))
@@ -126,7 +126,7 @@ jobs:
               await safeScreenshot(page, `screenshots/pubby_browse_loaded_${Date.now()}.png`);
               await sleep(5000);
 
-              // Stage 7: Scroll to load more
+              // Stage 7: Scroll to load more books
               for (let i = 0; i < 3; i++) {
                 console.log(`Stage 7: Scrolling iteration ${i+1}`);
                 await page.evaluate(() => window.scrollBy(0, window.innerHeight));
@@ -164,15 +164,12 @@ jobs:
               const kuProps = await kuHandle.getProperties();
               for (const prop of kuProps.values()) {
                 const el = prop.asElement();
-                if (el) {
-                  await el.click();
-                  break;
-                }
+                if (el) { await el.click(); break; }
               }
               await sleep(2000);
               await safeScreenshot(page, `screenshots/pubby_ku_card_clicked_${Date.now()}.png`);
 
-              // Stage 11: Click 'Pick Book' & open Reader
+              // Stage 11: Click 'Pick Book'
               console.log("Stage 11: Clicking 'Pick Book'…");
               const pickHandle = await page.evaluateHandle(xpath => {
                 const res = document.evaluate(xpath, document, null, XPathResult.ORDERED_NODE_SNAPSHOT_TYPE, null);
@@ -181,22 +178,22 @@ jobs:
               const pickProps = await pickHandle.getProperties();
               for (const prop of pickProps.values()) {
                 const el = prop.asElement();
-                if (el) {
-                  await el.click();
-                  break;
-                }
+                if (el) { await el.click(); break; }
               }
               await sleep(2000);
               await safeScreenshot(page, `screenshots/pubby_pick_book_clicked_${Date.now()}.png`);
 
+              // Stage 11b: Activate Reader and click current page
               console.log("Stage 11b: Clicking 'Reader' tab…");
               await page.evaluate(() => {
                 const tab = Array.from(document.querySelectorAll('.section-container .section-label'))
                   .find(el => el.innerText.trim() === 'Reader');
                 if (tab) tab.click();
               });
+              console.log("Stage 11b: Waiting for current page label…");
               await page.waitForSelector('.section-container .pages-container .page-label.current-page', { visible: true, timeout: 60000 });
               await safeScreenshot(page, `screenshots/pubby_reader_loaded_${Date.now()}.png`);
+              console.log("Stage 11b: Clicking current page in Reader…");
               const clickedReader = await page.evaluate(() => {
                 const curr = document.querySelector('.section-container .pages-container .page-label.current-page');
                 if (curr) { curr.click(); return true; }
@@ -208,29 +205,27 @@ jobs:
                 await safeScreenshot(page, `screenshots/pubby_reader_clicked_${Date.now()}.png`);
               }
 
-              // Stage 12: View On Amazon (attach-before-click)
+              // Stage 12: View On Amazon (selector-based wait)
               console.log("=== STAGE 12: View On Amazon DEBUG START ===");
               await dumpPageInfo(page, "before_click");
               await page.waitForSelector('.action.copy-amazon-link', { visible: true, timeout: 60000 });
               await safeScreenshot(page, `screenshots/pubby_before_amazon_${Date.now()}.png`);
               try {
-                // 1) Start listening for a new target
+                console.log("Stage 12: Waiting for new Amazon target...");
                 const targetPromise = browser.waitForTarget(
-                  t => /amazon\.co/.test(t.url()),
+                  t => /amazon\\.co/.test(t.url()),
                   { timeout: 90000 }
                 );
-                // 2) Click
                 await page.click('.action.copy-amazon-link');
-                // 3) Await the new target
                 const newTarget = await targetPromise;
                 console.log("Stage 12: New target detected:", newTarget.url());
                 const newPage = await newTarget.page();
                 if (!newPage) throw new Error("Failed to get newPage from target");
-                // 4) Debug & screenshot
                 await dumpPageInfo(newPage, "amazon_tab_before_nav");
+                console.log("Stage 12: Bringing new tab to front…");
                 await newPage.bringToFront();
-                await newPage.waitForNavigation({ waitUntil: 'networkidle2', timeout: 90000 });
-                await dumpPageInfo(newPage, "amazon_tab_after_nav");
+                // Wait for the Amazon product title to appear
+                await newPage.waitForSelector('#productTitle', { visible: true, timeout: 90000 });
                 await safeScreenshot(newPage, `screenshots/pubby_amazon_tab_${Date.now()}.png`);
                 console.log("=== STAGE 12: View On Amazon DEBUG SUCCESS ===");
               } catch (stageErr) {
