--- a/.github/workflows/pubby.yml
+++ b/.github/workflows/pubby.yml
@@ -62,7 +62,6 @@ jobs:
           async function loginAndBrowse(loginUrl, browseUrl, username, password) {
             let browser, page;
             try {
-              // Launch browser
               browser = await puppeteer.launch({
                 headless: 'new',
                 defaultViewport: null,
@@ -190,20 +189,15 @@ jobs:
                   .find(el => el.innerText.trim() === 'Reader');
                 if (tab) tab.click();
               });
-              console.log("Stage 11b: Waiting for current page label…");
               await page.waitForSelector('.section-container .pages-container .page-label.current-page', { visible: true, timeout: 60000 });
               await safeScreenshot(page, `screenshots/pubby_reader_loaded_${Date.now()}.png`);
-              console.log("Stage 11b: Clicking current page in Reader…");
               const clickedReader = await page.evaluate(() => {
                 const curr = document.querySelector('.section-container .pages-container .page-label.current-page');
                 if (curr) { curr.click(); return true; }
                 return false;
               });
-              if (!clickedReader) {
-                console.error("Stage 11b ERROR: Could not click current page in Reader");
-              } else {
-                await safeScreenshot(page, `screenshots/pubby_reader_clicked_${Date.now()}.png`);
-              }
+              if (!clickedReader) console.error("Stage 11b ERROR: Could not click current page in Reader");
+              else await safeScreenshot(page, `screenshots/pubby_reader_clicked_${Date.now()}.png`);
 
               // Stage 12: View On Amazon (selector-based wait)
               console.log("=== STAGE 12: View On Amazon DEBUG START ===");
@@ -211,9 +205,8 @@ jobs:
               await page.waitForSelector('.action.copy-amazon-link', { visible: true, timeout: 60000 });
               await safeScreenshot(page, `screenshots/pubby_before_amazon_${Date.now()}.png`);
               try {
-                console.log("Stage 12: Waiting for new Amazon target...");
                 const targetPromise = browser.waitForTarget(
-                  t => /amazon\\.co/.test(t.url()),
+                  t => /amazon\.co/.test(t.url()),
                   { timeout: 90000 }
                 );
                 await page.click('.action.copy-amazon-link');
@@ -222,9 +215,8 @@ jobs:
                 const newPage = await newTarget.page();
                 if (!newPage) throw new Error("Failed to get newPage from target");
                 await dumpPageInfo(newPage, "amazon_tab_before_nav");
-                console.log("Stage 12: Bringing new tab to front…");
                 await newPage.bringToFront();
-                // Wait for the Amazon product title to appear
+                // Wait for the Amazon product title
                 await newPage.waitForSelector('#productTitle', { visible: true, timeout: 90000 });
                 await safeScreenshot(newPage, `screenshots/pubby_amazon_tab_${Date.now()}.png`);
                 console.log("=== STAGE 12: View On Amazon DEBUG SUCCESS ===");
